--- a/careers.html
+++ b/careers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAL 9000 Website</title>
+    <title>PERIOX Website</title>
     <link rel="stylesheet" href="./css/careers.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -43,7 +43,7 @@
 
     <section id="career-heading" class="career-heading">
         <h1 class="heading">Career</h1>
-        <p>Job Opening in HAL 9000. Apply Now!</p>
+        <p>Job Opening in PERIOX. Apply Now!</p>
     </section>
     <div class="career">
         <div class="career-form">
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                    Copyright &copy; 2021 HAL 9000 Website. All Rights Reserved.
+                    Copyright &copy; 2021 PERIOX Website. All Rights Reserved.
                 </div>
             </div>
         </div>
