--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAL 9000 Website</title>
+    <title>PERIOX Website</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -39,7 +39,7 @@
 
   <section id="home" class="home">
       <h1>Bring your Business Online</h1>
-      <h2>with HAL 9000 Services</h2>
+      <h2>with PERIOX Services</h2>
     <div class="wave wave1"></div>
     <div class="wave wave2"></div>
     <div class="wave wave3"></div>
@@ -144,7 +144,7 @@
         <div class="section-head-1 col-sm-12" style="text-align: center;">
           <h4 style="margin-top: -5rem;" id="portfolio"><span>Our</span> Projects</h4>
           
-          <p>The objective of HAL 9000 is to enable a large number of youth to take up <br>industry-relevant skill training that will help them<br> in securing a better livelihood.
+          <p>The objective of PERIOX is to enable a large number of youth to take up <br>industry-relevant skill training that will help them<br> in securing a better livelihood.
             </p>
         </div>
         
@@ -400,7 +400,7 @@
               <div class="accordion">
                   <div class="accordion-header">
                       <span>+</span>
-                      <h3>How do I associate with HAL 9000?</h3>
+                      <h3>How do I associate with PERIOX?</h3>
                   </div>
                   <div class="accordion-body">
                       <p>The process begins when you contact us with your requirements. We analyze your requirements and respond to you. 
@@ -494,7 +494,7 @@
       <div class="container">
           <div class="row align-items-center">
               <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                  Copyright &copy; 2021 HAL 9000 Website. All Rights Reserved.
+                  Copyright &copy; 2021 PERIOX Website. All Rights Reserved.
               </div>
           </div>
       </div>
